# Beckings

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  data.json  hello.py  order.html  pyproject.toml  pytest.ini  rav.yaml  requirements.dev.txt  requirements.txt  schema.yaml
.scripts/: run.sh
src/: manage.py
src/api/: admin.py  authentication.py  models.py  permissions.py  urls.py  views.py
src/api/migrations/: 0001_initial.py  0002_rename_expired_token_expired_at.py
src/api/views/: __init__.py  base.py  orders.py  products.py  token.py  users.py
src/beckings/: asgi.py  feeds.py  settings.py  urls.py  views.py  wsgi.py
src/beckings/tests/: test_health_check_view.py  test_token_login.py
src/clients/: admin.py  backends.py  forms.py  models.py  urls.py  views.py
src/clients/migrations/: 0001_initial.py  0002_alter_client_phone_number.py
src/decorators/: pagination.py
src/feedbacks/: admin.py  forms.py  models.py  urls.py  views.py
src/feedbacks/migrations/: 0001_initial.py  0002_alter_feedback_complain_type_alter_feedback_user_id.py  0002_alter_feedback_user_id.py  0003_alter_feedback_complain_type_alter_feedback_user_id_and_more.py
src/helpers/: __init__.py  _cloudinary.py  _typing.py  context_processors.py  decorators.py  enum.py  factories.py  fields.py  filters.py  mixins.py  resources.py  serializers.py  testing.py  validators.py
src/helpers/decorators/: __init__.py  http.py
src/helpers/forms/: __init__.py  fields.py  mixins.py
src/helpers/serializers/: __init__.py  order.py  products.py  token.py  users.py
src/helpers/templatetags/: form_utils.py  utils.py
src/products/: actions.py  admin.py  filters.py  forms.py  manager.py  models.py  order_utils.py  urls.py  views.py
src/products/migrations/: 0001_initial.py  0002_alter_product_product_slug.py  0002_product_price_product_product_description_and_more.py  0003_product_active_product_user_alter_product_id.py  0003_rename_timpstamp_product_timepstamp.py  0004_rename_timepstamp_product_timestamp.py  0005_alter_product_options_product_product_name_index.py  0006_order.py  0009_product_out_of_stock.py  (+10 more)
src/templates/: _filter_query.html  base.html  base_page.html  email-body.txt  robots.txt
src/tests/: conftest.py  test_main.py
(+74 files in other folders)
