[project]
name = "beckings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudinary>=1.43.0",
    "django>=5.2",
    "django-cotton>=2.0.3",
    "djangorestframework>=3.16.0",
    "python-decouple>=3.8",
    "rav>=0.0.9",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.1.0",
]
